# pdi-scheduler

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: feature_request.md
.github/ISSUE_TEMPLATE/.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
data/: sample_pdi_export.xlsx
docs/: design.md  sprint_retrospectives.md
notebooks/: dashboard.ipynb  dashboard.py
scripts/: generate_synthetic_data.py
src/pdi_scheduler/: at_risk_vehicles.py  capacity.py  categories.py  cleaner.py  kpis.py  loader.py  priority_queue.py  risk.py  scheduling.py
tests/: test_at_risk_vehicles.py  test_capacity.py  test_categories.py  test_cleaner.py  test_kpis.py  test_loader.py  test_priority_queue.py  test_risk.py  test_scheduling.py
